<resources xmlns:moz="http://mozac.org/tools" xmlns:tools="http://schemas.android.com/tools">
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="urlbar_hint">Search or enter address</string>
    <string name="teaser">Automatic private browsing.\nBrowse. Erase. Repeat.</string>
    <string name="feedback_erase">Your browsing history has been erased.</string>
    <string name="feedback_erase2">Browsing history cleared</string>
    <string name="feedback_erase_custom_tab">Tab’s browsing history has been erased.</string>
    <string name="search_hint">Search for %1$s</string>
    <string name="menu_share">Share…</string>
    <string name="menu_report_site_issue">Report Site Issue</string>
    <string name="menu_open_with_default_browser2">Open in %1$s</string>
    <string name="menu_open_with_a_browser2">Open in…</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="menu_add_to_shortcuts">Add to Shortcuts</string>
    <string name="menu_remove_from_shortcuts">Remove from Shortcuts</string>
    <string name="menu_whats_new">What’s New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_trackers_blocked_title">Trackers blocked</string>
    <string name="menu_trackers_blocked_subtitle">Turning this off may fix some site problems</string>
    <string name="menu_content_blocking">Content Blocking</string>
    <string name="menu_content_blocking_subtitle">Turn off to fix some sites</string>
    <string name="menu_custom_tab_branding">Powered by %1$s</string>
    <string name="share_dialog_title">Share via</string>
    <string name="notification_erase_text">Erase browsing history</string>
    <string name="notification_action_open">Open</string>
    <string name="notification_action_erase_and_open">Erase and Open</string>
    <string name="shortcut_erase_short_label">Erase</string>
    <string name="shortcut_erase_long_label">Erase browsing history</string>
    <string name="shortcut_erase_and_open_short_label">Erase &amp; open</string>
    <string name="shortcut_erase_and_open_long_label">Erase and open %1$s</string>
    <string name="text_selection_search_action_focus">Search in Focus</string>
    <string name="text_selection_search_action_klar">Search in Klar</string>
    <string name="text_selection_search_action_focus_beta">Search in Focus Beta</string>
    <string name="text_selection_search_action_focus_nightly">Search in Focus Nightly</string>
    <string name="about_content"><![CDATA[<p>%1$s puts you in control.</p>
<p>Use it as a private browser:
  <ul>
    <li>Search and browse right in the app</li>
    <li>Block trackers (or update settings to allow trackers)</li>
    <li>Erase to delete cookies as well as search and browsing history</li>
  </ul>
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
<a href="%2$s">Learn more</a></p>]]></string>
    <string name="preference_privacy_and_security_header">Privacy &amp; Security</string>
    <string name="preference_privacy_and_security_summary">Tracking, cookies, data choices</string>
    <string name="preference_search_summary">Set default, autocomplete</string>
    <string name="preference_mozilla_summary">About %1$s, help</string>
    <string name="preference_category_tracking_protection3">Enhanced Tracking Protection</string>
    <string name="preference_category_web_content">Web Content</string>
    <string name="preference_category_switching_apps">Switching Apps</string>
    <string name="preference_category_general">General</string>
    <string name="preference_general_summary2">Default browser, language</string>
    <string name="preference_category_data_collection_use">Data Collection &amp; Use</string>
    <string name="preference_category_search">Search</string>
    <string name="preference_show_search_suggestions">Get search suggestions</string>
    <string name="preference_show_search_suggestions_summary">%1$s will send what you type in the address bar to your search engine</string>
    <string name="preference_search_engine_default">Default</string>
    <string name="preference_search_engine_label">Search engine</string>
    <string name="preference_state_on">On</string>
    <string name="preference_state_off">Off</string>
    <string name="preference_subitem_autocomplete">URL Autocomplete</string>
    <string name="preference_switch_autocomplete_topsites">For top sites</string>
    <string name="preference_autocomplete_topsite_summary2">Enable to have %s autocomplete over 450 popular URLs in the address bar.</string>
    <string name="preference_switch_autocomplete_user_list">For sites you add</string>
    <string name="preference_autocomplete_user_list_summary2">Enable to have %s autocomplete your favorite URLs.</string>
    <string name="preference_category_autocomplete_manage_sites">Manage sites</string>
    <string name="preference_autocomplete_subitem_manage_sites">Manage sites</string>
    <string name="preference_autocomplete_action_add">+ Add custom URL</string>
    <string name="preference_autocomplete_explanation_text">Your autocomplete list:</string>
    <string name="preference_autocomplete_action_add2">Add URL</string>
    <string name="preference_autocomplete_title_add">Add custom URL</string>
    <string name="custom_autocomplete_quick_add">Add custom URL</string>
    <string name="add_custom_autocomplete_label">Add link to autocomplete</string>
    <string name="preference_category_cookies">Cookies and Site Data</string>
    <string name="preference_category_data_choices">Data Choices</string>
    <string name="preference_autocomplete_title_remove">Remove custom URLs</string>
    <string name="preference_autocomplete_learn_more">Learn more</string>
    <string name="preference_autocomplete_custom_summary">Add and manage custom autocomplete URLs.</string>
    <string name="preference_autocomplete_add_title">URL to add</string>
    <string name="preference_autocomplete_add_hint">Paste or enter URL</string>
    <string name="preference_autocomplete_add_example2">Example: mozilla.org</string>
    <string name="preference_autocomplete_add_example">Example: example.com</string>
    <string name="preference_autocomplete_add_confirmation">New custom URL added.</string>
    <string name="preference_autocomplete_menu_remove">Remove</string>
    <string name="preference_autocomplete_action_remove_content_description">Remove</string>
    <string name="preference_autocomplete_add_error">Double-check the URL you entered.</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_systemdefault">System default</string>
    <string name="preference_category_privacy">Privacy</string>
    <string name="preference_privacy_block_ads">Block ad trackers</string>
    <string name="preference_privacy_block_ads_summary">Some ads track site visits, even if you don’t click the ads</string>
    <string name="preference_privacy_block_analytics">Block analytic trackers</string>
    <string name="preference_privacy_block_analytics_summary">Used to collect, analyze and measure activities like tapping and scrolling</string>
    <string name="preference_privacy_block_social">Block social trackers</string>
    <string name="preference_privacy_block_social_summary">Embedded on sites to track your visits and to display functionality like share buttons</string>
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_privacy_category_cookies">Block cookies</string>
    <string name="preference_privacy_should_block_cookies_no_option2">No thanks</string>
    <string name="preference_privacy_should_block_cookies_third_party_tracker_cookies_option">Block 3rd-party tracker cookies only</string>
    <string name="preference_privacy_should_block_cookies_third_party_only_option">Block 3rd-party cookies only</string>
    <string name="preference_privacy_should_block_cookies_cross_site_option">Block cross-site cookies</string>
    <string name="preference_privacy_should_block_cookies_yes_option2">Yes please</string>
    <string name="preference_security_biometric">Use fingerprint to unlock app</string>
    <string name="preference_security_biometric_summary2">Unlock using fingerprint if you’ve added Shortcuts or when a website is already open in %s.</string>
    <string name="preference_privacy_secure_mode">Stealth</string>
    <string name="preference_privacy_stealth_summary">Hide webpages when switching apps and block taking screenshots.</string>
    <string name="preference_category_security">Security</string>
    <string name="preference_category_performance">Performance</string>
    <string name="preference_performance_block_webfonts">Block web fonts</string>
    <string name="preference_performance_block_webfonts_summary">May result in missing icons or images</string>
    <string name="preference_performance_block_javascript">Block JavaScript</string>
    <string name="preference_performance_block_javascript_summary">Pages may load faster, but may also behave unexpectedly</string>
    <string name="preference_default_browser2">Make %1$s default browser</string>
    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>
    <string name="preference_mozilla_telemetry_summary">Learn more</string>
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_privacy_notice">Privacy Notice</string>
    <string name="preference_licensing_info">Licensing information</string>
    <string name="preference_libraries_we_use">Libraries that we use</string>
    <string name="open_source_licenses_title">%s | OSS Libraries</string>
    <string name="preference_about">About %1$s</string>
    <string name="preference_search_installed_search_engines">Installed search engines</string>
    <string name="preference_choose_search_engine">Choose search engine</string>
    <string name="preference_search_restore">Restore default search engines</string>
    <string name="preference_search_add2">+ Add another search engine</string>
    <string name="preference_search_remove_title">Remove search engines</string>
    <string name="preference_search_remove">Remove</string>
    <string name="search_add_manually_name_hint">Search engine name</string>
    <string name="search_add_manually_string">Search string to use</string>
    <string name="search_add_manually_example">Example: example.com/search/?q=%s</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_stop">Stop loading website</string>
    <string name="content_description_trackers_blocked">Number of trackers blocked</string>
    <string name="content_description_blocking_switch">Block trackers</string>
    <string name="preference_studies_summary">Firefox may install and run studies from time to time.</string>
    <string name="tab_crash_report_headline">Sorry. We’re having a problem with this tab.</string>
    <string name="tab_crash_report_description">As a private browser, we never save and cannot restore this tab.</string>
    <string name="tab_crash_report_close_tab_button_label">Close Tab</string>
    <string name="crash_report_send_crash_label">Send crash report to Mozilla</string>
</resources>