<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_forward"
        android:src="@drawable/ic_forward"/>

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_reload"
        android:src="@drawable/ic_refresh"/>

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:src="@drawable/ic_stop"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_stop" />
</LinearLayout>
