<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/preference_autocomplete_add_title"
        android:textColor="@color/colorAccentSettings" />

    <EditText
        android:id="@+id/domainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preference_autocomplete_add_hint"
        android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:lines="1"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        tools:targetApi="o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/preference_autocomplete_add_example2" />

</LinearLayout>