<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/photonGrey10">

    <View
        android:id="@+id/background"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_error_session_crashed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/headline"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:lineHeight="28dp"
        android:singleLine="false"
        android:text="@string/tab_crash_report_headline"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <EditText
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:lineHeight="22dp"
        android:singleLine="false"
        android:text="@string/tab_crash_report_description"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline" />

    <CheckBox
        android:id="@+id/sendCrashCheckbox"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:buttonTint="@color/colorCrashAccent"
        android:checked="true"
        android:textColor="@android:color/black"
        tools:text="@string/crash_report_send_crash_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/closeTabButton" />

    <Button
        android:id="@+id/closeTabButton"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorCrashAccent"
        android:text="@string/tab_crash_report_close_tab_button_label"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>