<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/menu_blocking_switch_container_height"
    android:background="@color/browser_menu_blocking_switch_bg"
    android:paddingStart="12dp"
    android:paddingEnd="0dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/content_description_trackers_blocked"
            android:src="@drawable/ic_trackers_blocked" />

        <TextView
            android:id="@+id/trackers_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            tools:ignore="MissingPrefix"
            tools:text="378" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/help_trackers"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu_help"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blocking_switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tracking_protection_toggle_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_blocking_switch_margin"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="@string/menu_trackers_blocked_title"
            android:textColor="@color/browser_menu_trackers_blocked_label"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/menu_blocking_switch_margin"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="@string/menu_trackers_blocked_subtitle"
            android:textColor="@color/browser_menu_trackers_blocked_label"
            android:textSize="14sp"
            android:alpha="0.6"
            android:layout_below="@id/tracking_protection_toggle_title" />
    </RelativeLayout>

    <Switch
        android:id="@+id/blocking_switch"
        android:layout_width="@dimen/menu_blocking_switch_width"
        android:layout_height="@dimen/menu_blocking_switch_height"
        android:layout_marginEnd="@dimen/menu_blocking_switch_margin"
        android:background="?android:attr/selectableItemBackground"
        android:checked="true"
        android:clickable="true"
        android:contentDescription="@string/content_description_blocking_switch"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
