<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/preference_root_layout_padding"
    android:importantForAutofill="noExcludeDescendants">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_engine_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/textinputlayout_spacing">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_engine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_add_manually_name_hint"
            android:inputType="text">
            <requestFocus/>
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_search_string_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_search_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_add_manually_string"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_add_manually_example"
        android:textColor="@android:color/tertiary_text_dark"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"/>

    <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

</LinearLayout>