<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:paddingTop="25dp">

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_menu"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/content_description_menu"
            android:background="?android:attr/selectableItemBackgroundBorderless" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:paddingBottom="30dp"
            android:src="@drawable/wordmark" />

        <TextView
            android:id="@+id/fake_urlbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/urlbar_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/urlbar_hint"
            android:textColor="#40ffffff"
            android:textSize="15sp"
            android:transitionName="urlbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="7sp"
            android:paddingTop="30dp"
            android:text="@string/teaser"
            android:textColor="#eeeeee"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>